--- a/assets/css/section_three.css
+++ b/assets/css/section_three.css
@@ -7,8 +7,10 @@
     font-family: "Love Light", serif;
     font-size: 32px;
     color: #0575B1;
+    font-weight: 100;
+    text-shadow: 0px 2px 2px #0000009e;
 }
-.dire{
+.direccion{
     font-family: "Cormorant", serif;
     font-size: 20px;
 }
@@ -37,4 +39,21 @@
     border-radius: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     cursor: pointer;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+}
+.img_call{
+    width: 23px;
+    height: 23px;
+}
+.img_gps{
+    width: 20px;
+    height: 26px;
+}
+.asis{
+    width: 70px;
+}
+.gps{
+    width: 56px;
 }
