--- a/assets/css/section_two.css
+++ b/assets/css/section_two.css
@@ -3,10 +3,13 @@
     font-family: "Love Light", serif;
     color: #0575B1;
     text-align: center;
+    text-shadow: 0px 2px 2px #0000009e;
+    font-weight: 100;
 }
 .fecha{
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .sem_hour{
     font-size: 20px;
@@ -37,4 +40,35 @@
     text-align: center;
     color: #0575B1;
     margin: 22px 0;
+    font-weight: 100;
+    text-shadow: 0px 2px 2px #0000009e;
+    font-weight: 100;
+}
+.gran_dia{
+    display: flex;
+    justify-content: center;
+    gap: 17px;
+}
+.cont{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.dias,.horas,.min,.seg{
+    font-size: 20px;
+    font-family: "Cormorant", serif;
+    background: #A56D3F;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    box-shadow: 0px 4px #0000002c;
+}
+.count{
+    font-size: 15px;
+    font-family: "Cormorant", serif;
+    margin: 10px 0;
 }
