--- a/style.css
+++ b/style.css
@@ -9,36 +9,10 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 1122px;
+    height: 1085px;
     flex-direction: column;
-    border: 2px solid #000;
+    border: 1.5px dashed #000;;
     margin: 32px 28px;
     width: 376px;
     background-color: #fff;
-}
-.sub_sug{
-    margin:0 0 0 184px;
-    font-size: 32px;
-    font-family: "Love Light", serif;
-    color: #0575B1;
-}
-.group_4{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.parrafo{
-    font-size: 16px;
-    font-family: "Cormorant", serif;
-    font-weight: bold;
-    text-align: center;
-}
-.p_ty{
-    font-size:24px;
-    font-family: "Love Light", serif;
-    color: #0575B1;
-    display: flex;
-    flex-direction: row-reverse;
-    font-weight: bold;
-    margin-right: 14px;
 }
